# 100-days-of-python

./: .gitignore  README.rst  pyproject.toml
100_days_of_python/day-x-template/: app.py  test_app.py
100_days_of_python/day_1/: day1.py  test_day1.py
100_days_of_python/day_2/: day2.py  test_day2.py
100_days_of_python/day_3/: README.rst  day3.py  test_day3.py
100_days_of_python/day_4/: README.rst  day4.py  helpers.py
